# dirutils

./: Doxyfile  Makefile  README.md  builddeb.sh  buildpkg.sh  buildrpm.sh
lib/: Makefile.am  builddeb.sh.in  config.h.in  configure.ac  libdircmd.spec.in
lib/debian/: README.source  control.in  files
lib/src/: config.c  crc.c  dircmd.c  dircmd.h  display.c  list.c  match.c
libdircmd/: ChangeLog  Makefile.am  builddeb.sh.in  buildpkg.sh.in  configure.ac  libdircmd.spec.in
libdircmd/debian/: README.Debian  copyright  libdircmd.substvars
libdircmd/pkgconfig/: dircmd.pc.in
libdircmd/src/: config.c  crc.c  dircmd.c  dircmd.h  display.c  list.c  match.c
others/: AUTHORS  Makefile.am  buildDate.h  configure.ac
others/src/: casedir.c  memTest.c  procMonitor.c
utils/: Makefile.am  addComment.c  buildDate.h  builddeb.sh.in  buildpkg.sh.in  buildrpm.sh.in  casedir.c  config.h.in  configure.ac  dircmdutils.spec.in  hexDump.c  listFunc.c  ndirrc  pfile.c  procMonitor.c  rmcr.c  test.xml  test.xsd  testPower.xsd
utils/debian/: README.Debian  README.source  control.in  dircmdutils.substvars  files
utils/src/: addComment.c  addcr.c  casedir.c  casefile.c  fileChop.c  findFunny.c  fixDir.c  hexDump.c  inQuote.c  jsonParse.c  ldir.c  lineDraw.c  lineNum.c  lines.c  listFunc.c  memTest.c  mkTable.c  modcr.c  ndir.c  numComment.c  pfile.c  procMonitor.c  rmCppCmt.c  rmcr.c  tabSpace.c  xmlCsv.c  xmlParse.c
